--- a/templates/test.html
+++ b/templates/test.html
@@ -7,15 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    {{posts}}
-
-    {% for post in posts %}
-        {% if post.status == 0 %}
-        <p> Not published yet.</p>
-        {% else %}
-        <h1>{{post.title}}</h1>
-        <p> {{post}} </p>
-        {% endif %}
-    {% endfor %}
+    {{post.title}}
 </body>
 </html>
