--- a/templates/base.html
+++ b/templates/base.html
@@ -64,12 +64,7 @@
                     <ul class="nav-menu">
                         <li><a href="{% url 'webapp1:index' %}">Home</a></li>
                         <li><a href="{% url 'webapp1:about' %}">About</a></li>
-                        <li class="menu-has-children"><a href="">Blog</a>
-                            <ul>
-                                <li><a href="{% url 'blog:index' %}">Blog Home</a></li>
-                                <li><a href="{% url 'blog:single' %}">Blog Single</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="{% url 'blog:index' %}">Blog</a></li>
                         <li class="menu-has-children"><a href="">Pages</a>
                             <ul>
                                 <li><a href="{% url 'webapp1:elements' %}">Elements</a></li>
