--- a/templates/test.html
+++ b/templates/test.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p> {{name}} </p>
-    
+   <p> test: {% posts as totalposts %} </p>
+    {% for post in totalposts %}
+    <p> {{post.content|snippet:100}} </p>
+    {% endfor %}
 </body>
 </html>
