--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -94,11 +94,11 @@
 							<div class="single-post row">
 								<div class="col-lg-3  col-md-3 meta-details">
 									<ul class="tags">
-										<!-- {% for cat in post.category.all %}
+										{% for cat in post.category.all %}
 
-										<li><a href="#"></a>{{cat.name}}</a></li>
-										{% endfor %} -->
-										{{post.category.all|join:", "}}
+										<li><a href="{% url 'blog:category' cat_name=cat.name %}"> {{cat.name}} </a>{% if not forloop.last %},{% endif %} </li>
+										{% endfor %} 
+										
 										
 									</ul>
 									<div class="user-details row">
